# chat_app_socket

./: README.md
c_soc_server/: CMakeLists.txt  main.c
c_socket/: CMakeLists.txt  main  main.c
socket_util/: CMakeLists.txt  socketutil.c  socketutil.h
